force-app/main/default/objects/Response__c/Response__c.object-meta.xml
<CustomObject>
    <label>Response</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>